@@ -39,13 +39,6 @@ class GO_Ldapauth_Authenticator {
 					'city' => 'homelocalityname',
 					'zip' => 'homepostalcode',
 					'address' => 'homepostaladdress',
-//					'homepage' => 'homeurl',
-//					'work_address' => 'postaladdress',
-//					'work_zip' => 'postalcode',
-//					'work_country' => 'c',
-//					'work_state' => 'st',
-//					'work_city' => 'l',
-//					'work_fax' => 'facsimiletelephonenumber',
 					'currency' => 'gocurrency',
 					'max_rows_list' => 'gomaxrowslist',
 					'timezone' => 'gotimezone',
